# pybia

./: Cargo.toml  LICENSE  README.md  services.toml
.github/workflows/: ci.yml  python.yml  rust.yml
pytest-pybia/: .pre-commit-config.yaml  README.md  format_code.sh  pyproject.toml  pytest.ini
pytest-pybia/pytest_pybia/: __init__.py  dependency.py  impact.py  plugin.py  pybia_client.py
pytest-pybia/tests/: test_plugin.py
src/: lib.rs  main.rs  utils.rs  watcher.rs
src/dependency/: mod.rs  tests.rs
src/package_deps/: dep_parser.rs  import_parser.rs  mod.rs  models.rs  tests.rs
src/service/: detector.rs  mod.rs  models.rs
src/service/tests/: detector_tests.rs  mod.rs  models_tests.rs
tests/: integration_test.rs
