[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-pybia"
version = "0.1.0"
description = "Pytest plugin to skip tests not impacted by code changes using PyBia"
readme = "README.md"
authors = [
    {name = "Cody Lee", email = "cody.lee@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["pytest", "ci", "testing", "impact analysis"]
dependencies = [
    "pytest>=6.0.0",
    "subprocess-run>=0.0.8",
    "pyyaml>=6.0",
    "toml>=0.10.2",
]

[project.entry-points.pytest11]
pybia = "pytest_pybia.plugin"

[project.urls]
"Homepage" = "https://github.com/platinummonkey/pytest-pybia"
"Bug Tracker" = "https://github.com/platinummonkey/pytest-pybia/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.7+
target-version = "py37"

[tool.ruff.lint]
# Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I'), and more
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "S", "BLE", "A", "C", "T", "PT", "RET", "SIM"]
ignore = [
    "S101",  # Ignore assert usage in tests
    "S603",  # Ignore subprocess call security warnings
    "S607",  # Ignore partial executable path warnings
    "T201",  # Ignore print statements for now
    "BLE001",  # Ignore blind exception catches
    "C901",   # Ignore complex function warnings
]

[tool.ruff.lint.isort]
known-first-party = ["pytest_pybia"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assertions in tests 